--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <button>🔍</button>
       </div>
       <nav class="menu">
-        <a href="#">HOME</a>
-        <a href="#">QUIZ</a>
+        <a href="index.html">HOME</a>
+        <a href="quiz.html">QUIZ</a>
         <a href="#">CATEGORY</a>
       </nav>
     </div>
@@ -26,10 +26,6 @@
           <p class="second">분리수거.</p>
         </div>
     </div>
-      
-</div>
-
-      
   </header>
 
   <main>
