--- a/quiz.html
+++ b/quiz.html
@@ -2,6 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>에코빈 - 퀴즈</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -11,8 +12,8 @@
             <div class="navbar">
                 <div class="logo">에코빈</div>
                 <div class="search-box">
-                    <input type="text" placeholder="어떤 쓰레기를 버리실 건가요?">
-                    <button>🔍</button>
+                    <input id="search-input" type="text" placeholder="어떤 쓰레기를 버리실 건가요?">
+                    <button id="search-button">🔍</button>
                 </div>
                 <nav class="menu">
                     <a href="index.html">HOME</a>
@@ -25,7 +26,20 @@
             <div class="quiz-container" id="quizBox"></div>
         </main>
 
-        <script src="quizData.js"></script>
+        <footer class="site-footer">
+            <div class="footer-content">
+            <p>&copy; 2025 Web Programming Project (주)에코빈</p>
+
+            <ul class="footer-links">
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">고객센터</a></li>
+            </ul>
+            </div>
+        </footer>
+
+        <script src="recycle.js"></script>
         <script src="script.js"></script>
+        <script src="quiz.js"></script>
     </body>
 </html>
