카테고리 페이지, 퀴즈 오류 해결

--- a/category.html
+++ b/category.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>에코빈</title>
+  <title>에코빈 - 카테고리</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <header>
     <div class="navbar">
@@ -24,54 +23,48 @@
   </header>
 
   <main>
-    <div class="hero">
-        <div class="hero-text">
-          <p class="first">친환경을 위한 첫 걸음,</p>
-          <p class="second">분리수거.</p>
-        </div>
-    </div>
-
-    <section class="category-section-m">
+    <section class="category-section-c">
       <a href="category-general.html">
         <div class="category">
-          <h2>일반 🗑️</h2>
-          <ul>
-            <li>쓰레기 종류</li>
-            <li>특징</li>
-            <li>처리 방법</li>
-          </ul>
+        <h2>일반 🗑️</h2>
+        <ul>
+          <li><strong>예:</strong> 기저귀, 휴지, 물티슈, 깨진 유리</li>
+          <li><strong>특징:</strong> 이물질이 많아 재활용이 불가능함</li>
+          <li><strong>처리 방법:</strong> 잘 모아 종량제 봉투에 배출</li>
+        </ul>
         </div>
       </a>
       <a href="category-food.html">
         <div class="category">
-          <h2>음식물 🐟</h2>
-          <ul>
-            <li>쓰레기 종류</li>
-            <li>특징</li>
-            <li>처리 방법</li>
-          </ul>
+        <h2>음식물 🐟</h2>
+        <ul>
+          <li><strong>예:</strong> 생선 뼈, 채소 껍질, 과일 찌꺼기</li>
+          <li><strong>주의:</strong> 껍질·씨 등 단단한 부분은 일반 쓰레기</li>
+          <li><strong>처리 방법:</strong> 물기 제거 후 음식물 전용 수거함 배출</li>
+        </ul>
         </div>
       </a>
       <a href="category-recycle.html">
         <div class="category">
-          <h2>재활용 ♻️</h2>
-          <ul>
-            <li>쓰레기 종류</li>
-            <li>특징</li>
-            <li>처리 방법</li>
-          </ul>
+        <h2>재활용 ♻️</h2>
+        <ul>
+          <li><strong>예:</strong> 페트병, 캔, 종이, 종이팩, 투명 플라스틱</li>
+          <li><strong>조건:</strong> 이물질 제거, 라벨 분리</li>
+          <li><strong>처리 방법:</strong> 내용물 비우고 깨끗이 세척</li>
+        </ul>
         </div>
       </a>
       <a href="category-etc.html">
         <div class="category">
-          <h2>기타 ✏️</h2>
-          <ul>
-            <li>쓰레기 종류</li>
-            <li>특징</li>
-            <li>처리 방법</li>
-          </ul>
+        <h2>기타 ✏️</h2>
+        <ul>
+          <li><strong>예:</strong> 폐건전지, 형광등, 의약품</li>
+          <li><strong>주의:</strong> 특수 폐기물로 일반 쓰레기 금지</li>
+          <li><strong>처리 방법:</strong> 주민센터, 지정 수거함에 배출</li>
+        </ul>
         </div>
       </a>
+      
     </section>
   </main>
 
@@ -88,7 +81,7 @@
   </footer>
 
   <script src="recycle.js"></script>
-  <script src="script.js"></script>
+  <script src="script.js"></script> 
 
 </body>
 </html>
