--- a/quiz.html
+++ b/quiz.html
@@ -18,7 +18,7 @@
                 <nav class="menu">
                     <a href="index.html">HOME</a>
                     <a href="quiz.html">QUIZ</a>
-                    <a href="#">CATEGORY</a>
+                    <a href="category.html">CATEGORY</a>
                 </nav>
             </div>
         </header>
