로고 클릭 시 메인 화면으로 이동

--- a/recycle.html
+++ b/recycle.html
@@ -10,7 +10,9 @@
     <body>
         <header>
             <div class="navbar">
-            <div class="logo">에코빈</div>
+            <div class="logo">
+                <a href="index.html">에코빈</a>
+            </div>
             <div class="search-box">
                 <input id="search-input" type="text" placeholder="어떤 쓰레기를 버리실 건가요?">
                 <button id="search-button">🔍</button>
